# document-intelligence

./: .env.example  .gitignore  README-document-intelligence.md  pyproject.toml
config/: document_types.yaml
src/document_intelligence/: __init__.py  cli.py
src/document_intelligence/api/: __init__.py  app.py  routes.py  schemas.py
src/document_intelligence/classifiers/: __init__.py  keyword_classifier.py
src/document_intelligence/config/: __init__.py  settings.py
src/document_intelligence/core/: __init__.py  pipeline.py  type_registry.py
src/document_intelligence/extractors/: __init__.py  base.py  docling_extractor.py
src/document_intelligence/formatters/: __init__.py  csv_formatter.py  json_formatter.py
src/document_intelligence/models/: __init__.py  documents.py  rental.py
src/document_intelligence/static/: index.html
src/document_intelligence/taggers/: __init__.py  field_tagger.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_field_tagger.py  test_formatters.py  test_models.py  test_type_registry.py
