[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence"
version = "0.1.0"
description = "Financial document processing pipeline -- ingest, classify, extract, tag, output."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Document Intelligence Team" }]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "pyyaml>=6,<7",
    "docling>=2.90",
]

[project.optional-dependencies]
# Structured extraction with Docling's NuExtract model
extract = ["docling[extract]"]

# Chandra OCR as an alternative / complementary engine
chandra = ["chandra-ocr"]

# Developer tools
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

all = [
    "document-intelligence[extract,chandra,dev]",
]

[project.scripts]
di-server = "document_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/document_intelligence"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["document_intelligence"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["docling.*", "chandra_ocr.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
